--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lyrics Stream - Apple Music Style</title>
+    <title>Lyrix by Noé</title>
     <style>
         * {
             margin: 0;
@@ -543,8 +543,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="logo">Lyrics Stream</h1>
-            <p class="subtitle">Paroles Synchronisées · Style Apple Music</p>
+            <h1 class="logo">Lyrix</h1>
+            <p class="subtitle">V2.1 · Made with love by Noéc</p>
         </div>
 
         <div class="search-container">
